--- a/DIPA_Laboratory_Exercise_3.ipynb
+++ b/DIPA_Laboratory_Exercise_3.ipynb
@@ -296,10 +296,55 @@
       },
       "outputs": [],
       "source": [
-        "def restore(imgD, psf, filter='inverse'):\n",
-        "    # Write-in your solution\n",
-        "    # ...\n",
-        "    # ...\n",
+        "import numpy as np\n",
+        "from scipy.fft import fft2, ifft2, fftshift\n",
+        "\n",
+        "def restore(imgD, psf, filter='inverse', K=1e-3):\n",
+        "    \"\"\"\n",
+        "    Obnavlja sliku korištenjem inverznog ili pseudo-inverznog filtra.\n",
+        "\n",
+        "    Args:\n",
+        "        imgD (ndarray): Degradirana slika (output iz akvizicijskog sustava).\n",
+        "        psf (ndarray): Point Spread Function (impulsni odziv sustava).\n",
+        "        filter (str): 'inverse' ili 'pseudoinverse'.\n",
+        "        K (float): Prag za pseudo-inverzni filter.\n",
+        "\n",
+        "    Returns:\n",
+        "        imgR (ndarray): Restaurirana slika.\n",
+        "    \"\"\"\n",
+        "    # Dimenzije i padding\n",
+        "    H, W = imgD.shape\n",
+        "    pad_psf = np.zeros_like(imgD)\n",
+        "    psfH, psfW = psf.shape\n",
+        "    pad_psf[:psfH, :psfW] = psf  # postavi PSF u gornji lijevi kut\n",
+        "\n",
+        "    # Pomak PSF-a tako da bude centriran (kao kod cirkularne konvolucije)\n",
+        "    pad_psf = fftshift(pad_psf)\n",
+        "\n",
+        "    # Fourierove transformacije slike i PSF-a\n",
+        "    G = fft2(imgD)\n",
+        "    H_f = fft2(pad_psf)\n",
+        "\n",
+        "    # Inverzni filter\n",
+        "    if filter == 'inverse':\n",
+        "        # Dodavanje malog eps da se izbjegne dijeljenje s nulom\n",
+        "        eps = 1e-8\n",
+        "        H_f = np.where(np.abs(H_f) < eps, eps, H_f)\n",
+        "        F_hat = G / H_f\n",
+        "\n",
+        "    # Pseudo-inverzni filter\n",
+        "    elif filter == 'pseudoinverse':\n",
+        "        mask = np.abs(H_f) > K\n",
+        "        H_pi = np.zeros_like(H_f, dtype=complex)\n",
+        "        H_pi[mask] = 1 / H_f[mask]\n",
+        "        F_hat = G * H_pi\n",
+        "\n",
+        "    else:\n",
+        "        raise ValueError(\"filter must be 'inverse' or 'pseudoinverse'\")\n",
+        "\n",
+        "    # Inverzna Fourierova transformacija za dobivanje restaurirane slike\n",
+        "    imgR = np.real(ifft2(F_hat))\n",
+        "\n",
         "    return imgR"
       ]
     },
@@ -1040,8 +1085,7 @@
         "    # the ACF is symmetrical so we can just fill in the results for negative shift values\n",
         "    rxx = np.hstack((np.fliplr(rxx[:,1:]), rxx))\n",
         "    rxx = np.vstack((np.flipud(rxx[1:,:]), rxx))\n",
-        "    return rxx\n",
-        ""
+        "    return rxx\n"
       ]
     },
     {
